workspace-sf/force-app/main/default/objects/Operacao__mdt/Operacao__mdt.object-meta.xml
<CustomObject>
    <description>Metadata com as operações e sub operações das OP&apos;s</description>
    <label>Operação</label>
    <pluralLabel>Operações</pluralLabel>
</CustomObject>