workspace-sf/force-app/main/default/objects/Operacao__mdt/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <label>Tipo Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REMUNERACAO</fullName>
                <default>true</default>
                <label>REMUNERACAO</label>
            </value>
            <value>
                <fullName>SINISTRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>