workspace-sf/force-app/main/default/objects/Operacao__mdt/fields/TipoRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>TipoRemuneracao__c</fullName>
    <label>Tipo Remuneração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGE</fullName>
                <default>true</default>
                <label>AGE</label>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>