workspace-sf/force-app/main/default/objects/Operacao__mdt/fields/TipoSinistro__c.field-meta.xml
<CustomField>
    <fullName>TipoSinistro__c</fullName>
    <label>Tipo Sinistro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IND</fullName>
                <default>true</default>
                <label>IND</label>
            </value>
            <value>
                <fullName>DPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>